--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,6 +9,13 @@ layout: default
 
 <ul class="category-list">
 {% for post in site.categories.[page.category] %}
-  <li><a href="{{post.url}}"><img src="{{ site.url }}/assets/images/{{ post.imgurl }}" alt="{{ page.title }} - {{ site.title }}" /><span>{{post.title}}</span></a></li>
+  <li>
+    <a href="{{post.url}}">
+        {% unless post.imgurl == null %}
+          <img src="{{ site.url }}/assets/images/{{ post.imgurl }}" alt="{{ page.title }} - {{ site.title }}" />
+        {% endunless %}
+        <span>{{post.title}}</span>
+    </a>
+</li>
 {% endfor %}
 </ul>
